# Desafio_InBev

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  README.md  airflow_settings.yaml  env.template  mkdocs.yml  packages.txt  pr1.json  pr4.json  pr8.json  pyproject.toml  requirements.txt
.astro/: config.yaml
.github/: CODEOWNERS  DEPENDABOT_MERGE_GUIDE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  test-dependabot-prs.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml  dependabot-auto-merge.yml  mkdocs-deploy.yml  pr-checks.yml  security.yml
dags/: azure_data_factory_dag.py  brewery_etl_dag.py  data_quality_check_dag.py  databricks_processing_dag.py  exceptions.py  execute_notebook_databricks.py  extract_data_api_slq_azure.py  system_health_monitor_dag.py  trigger_data_factory_azure.py
dags/config/: __init__.py  settings.py
dags/data_quality/: __init__.py  dimensions.py  framework.py
dags/data_quality/rules/: __init__.py  brewery_rules.py
dags/domain/: __init__.py  entities.py  exceptions.py  validators.py  value_objects.py
dags/examples/: __init__.py  config_usage_example.py
dags/factories/: __init__.py  etl_factory.py
dags/interfaces/: __init__.py  data_extractor.py  data_loader.py  data_transformer.py
dags/observability/: __init__.py  metrics.py
dags/observability/alerts/: __init__.py  base.py  email_alerter.py  slack_alerter.py
dags/repositories/: __init__.py  base.py  brewery_repository.py  unit_of_work.py
dags/services/: __init__.py  azure_sql_loader.py  brewery_api_extractor.py  brewery_transformer.py
dags/use_cases/: __init__.py  extract.py  load.py  quality.py  transform.py
dags/utils/: __init__.py  logger.py
docs/: SETUP_GITHUB_PAGES.md  index.md
docs/architecture/: components.md  data-flow.md  domain-layer.md  overview.md  repositories.md  use-cases.md
docs/dags/: azure-data-factory.md  databricks-notebook.md  extract-api-sql.md  introduction.md
docs/development/: ci-corrections-history.md
docs/guides/: best-practices.md  data-quality.md  deployment.md  observability.md  troubleshooting.md
docs/setup/: connections.md  initial-setup.md  local-development.md  variables.md
tests/: README.md  conftest.py  test_config.py  test_services.py
tests/integration/: __init__.py  test_domain_layer.py  test_full_pipeline.py  test_repositories.py  test_use_cases.py
tests/integration.disabled/: README.md  test_full_pipeline.py  test_use_cases.py
